--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         </address>
       </div>
       <div class="footer-bottom">
-        <p>2025 Jannes Ruder</p>
+        <p><a href="https://github.com/JannesRuder1" target="_blank" rel="noopener noreferrer">2025 Jannes Ruder</a></p>
       </div>
     </footer>
     <script src="script.js"></script>
