--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       </button>
       <ul class="navbar-menu">
         <img src="honey.png" alt="Imkerei Logo" class="logo" />
+        <li><a href="#section0">imkerei Himmelpforten</a></li>
         <li><a href="#section1">Regionaler Honig</a></li>
         <li><a href="#section2">Früh- & Sommertracht</a></li>
         <li><a href="#section3">Honigwaben</a></li>
@@ -27,18 +28,28 @@
       </ul>
     </nav>
 
-    <section id="section1" class="content-section section1">
-      <div class="text-container">
+    <section id="section0" class="content-section section0">
+      <di class="text-container">
         <h4>„Vom Himmel geschickt, von Bienen gemacht.“</h4>
         <h2>
           Erleben Sie den unverfälschten Geschmack der Natur – direkt vom Imker
           aus dem Christkinddorf Himmelpforten!
         </h2>
-        <p>
-          Unser Honig stammt aus einer kleinen, liebevoll geführten
-          Familienimkerei. Mit großer Sorgfalt geerntet und abgefüllt, bewahren
-          wir die Reinheit und Qualität jedes Glases.
-        </p>
+
+      </di>
+      <div class="image-container">
+        <img
+          src="extraordner/bild1.jpg"
+          alt="Neue Sektion Bild"
+        />
+      </div>
+    </section>
+
+    <section id="section1" class="content-section section1">
+      <div class="text-container">
+        <h2>
+          Regionaler Honig
+        </h2>
         <p>
           <b>Deutscher Qualitäts-Honig </b>– perfekt fürs Frühstücksbrötchen,
           zum Süßen von Tee oder zum Backen feiner Köstlichkeiten.
@@ -55,7 +66,7 @@
       </div>
       <div class="image-container">
         <img
-          src="extraordner/bild1.jpg"
+          src="extraordner/bild8.jpg"
           alt="„Vom Himmel geschickt, von Bienen gemacht.“"
         />
       </div>
@@ -178,7 +189,7 @@
 
     <section id="section8" class="content-section section4">
       <div class="image-container">
-        <img src="extraordner/bild8.jpg" alt="Wir sind Viktor und Simon – Vater und Sohn – und gemeinsam betreiben wir unsere kleine Imkerei." />
+        <img src="extraordner/bild9.jpg" alt="Wir sind Viktor und Simon – Vater und Sohn – und gemeinsam betreiben wir unsere kleine Imkerei." />
       </div>
       <div class="text-container">
         <h2>Wir sind Viktor und Simon – Vater und Sohn – und gemeinsam betreiben wir unsere kleine Imkerei.</h2>
