--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </button>
       <ul class="navbar-menu">
         <img src="honey.png" alt="Imkerei Logo" class="logo" />
-        <li><a href="#section0">imkerei Himmelpforten</a></li>
+        <li><a href="#section0">Imkerei Ruder</a></li>
         <li><a href="#section1">Regionaler Honig</a></li>
         <li><a href="#section2">Früh- & Sommertracht</a></li>
         <li><a href="#section3">Honigwaben</a></li>
