--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@
     </nav>
 
     <section id="section0" class="content-section section0">
-      <di class="text-container">
+      <div class="text-container">
         <h4>„Vom Himmel geschickt, von Bienen gemacht.“</h4>
         <h2>
           Erleben Sie den unverfälschten Geschmack der Natur – direkt vom Imker
           aus dem Christkinddorf Himmelpforten!
         </h2>
-
-      </di>
+        <div class="additional-image-container">
+          <img src="extraordner/bild10.jpg" alt="Bild 10" />
+        </div>
+      </div>
       <div class="image-container">
         <img
           src="extraordner/bild1.jpg"
