--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <div class="text-container">
         <h2>Unsere Region – Was unsere Bienen sammeln</h2>
         <p>
-          Unsere Bienen fliegen durch eine vielfältige, blühende Landschaft: Sie sammeln Nektar und Pollen aus Obstbäumen, wilden Blumen, blühenden Gärten der Nachbarschaft und den zahlreichen Lindenbäumen in der Umgebung. Auch der nahegelegene Wald bietet wertvolle Pflanzen oder verschiedene Waldblüten. Diese bunte Mischung macht unseren Honig so einzigartig – jede Ernte ist ein Spiegel unserer natürlichen Umgebung.
+          Unsere Bienen fliegen durch eine vielfältige, blühende Landschaft: Sie sammeln Nektar und Pollen aus Obstbäumen, wilden Blumen, blühenden Gärten der Nachbarschaft und den zahlreichen Lindenbäumen in der Umgebung. Auch der nahegelegene Wald bietet wertvolle Pflanzen oder verschiedene Waldblüten. Diese bunte Mischung macht unseren Honig so einzigartig.
         </p>
       </div>
     </section>
@@ -159,16 +159,16 @@
           </li>
           <p></p>
           <li>
-            Im Winter ziehen sie sich in die Wintertraube zurück und werden nicht gestört – wir sorgen nur still dafür, dass sie gut versorgt sind. So begleiten wir unsere Völker das ganze Jahr über mit Sorgfalt und Respekt.
+            Im Winter ziehen sie sich in die Wintertraube zurück und werden nicht gestört – wir sorgen nur still dafür, dass sie gut versorgt sind.
           </li>
       </div>
     </section>
 
     <section id="section7" class="content-section section3">
       <div class="text-container">
-        <h2>Mit Liebe geerntet – unsere Honigpreise</h2>
+        <h2>Unsere Honigpreise</h2>
         <h3>
-          Frühtracht oder Sommertracht
+          Blütenhonig
         </h3>
         <p>
             500g im Glas – <b>7€</b>
@@ -203,13 +203,13 @@
             So reifte in uns die Idee, das Abenteuer Imkerei gemeinsam anzugehen – als Vater und Sohn.
         </p>
         <p>
-            „Bei einer Schulung des Kreisimkervereins Stade von 1887 e.V. – im Deutschen Imkerbund e.V. registriert – lernten wir alles über Bienen, ihre Pflege, die Honiggewinnung und die Bedeutung einer verantwortungsvollen Imkerei. Heute dürfen wir unseren Honig stolz unter dem Siegel ‚Echter Deutscher Honig‘ verkaufen – ein Symbol für Qualität und ehrliche Handarbeit.“
+            Bei einer Schulung des Kreisimkervereins Stade von 1887 e.V. – im Deutschen Imkerbund e.V. registriert – lernten wir alles über Bienen, ihre Pflege, die Honiggewinnung und die Bedeutung einer verantwortungsvollen Imkerei. Heute dürfen wir unseren Honig stolz unter dem Siegel ‚Echter Deutscher Honig‘ verkaufen.
         </p>
         <p>
-            Inzwischen ist Simon 13 und mit ganzem Herzen Jungimker. Gemeinsam kümmern wir uns um unsere Bienenvölker, ernten ihren Honig mit Sorgfalt – und staunen immer wieder über die Wunder der Natur. 
+            Inzwischen ist Simon 13 und mit ganzem Herzen Jungimker. Gemeinsam kümmern wir uns um unsere Bienenvölker. 
         </p>
         <p>
-            Unsere kleine Imkerei ist für uns mehr als nur ein Hobby – sie ist ein Familienprojekt, das verbindet, Freude schenkt und unseren Respekt vor der Natur täglich wachsen lässt.
+            Unsere kleine Imkerei ist für uns mehr als nur ein Hobby – sie ist ein Familienprojekt!
         </p>
       </div>
     </section>
