--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           Blütenhonig
         </h3>
         <p>
-            500g im Glas – <b>7€</b>
+            500g im Glas (cremig oder flüssig)– <b>7€</b>
         </p>
         
         <p>
