--- a/index.html
+++ b/index.html
@@ -213,6 +213,22 @@
         </p>
       </div>
     </section>
+        <section id="section9" class="content-section section3">
+      <div class="imagetoo-container">
+        <img src="extraordner/Zertifikat Simon.jpg" alt="Zertifikat Simon" />
+      </div>
+      <div class="image-container">
+        <img src="extraordner/Zertifikat Viktor.jpg" alt="Zertifikat Viktor" />
+      </div>
+    </section>
+        <section id="section8" class="content-section section4">
+      <div class="imagetoo-container">
+        <img src="extraordner/TN. Bestätigung Simon.jpg" alt="TN. Bestätigung Simon" />
+      </div>
+      <div class="image-container">
+        <img src="extraordner/TN. Bestätigung Viktor.jpg" alt="TN. Bestätigung Viktor" />
+      </div>
+    </section>
     <footer class="footer-section">
       <div class="footer-content">
         <address>
